src/mc/value/parser.output

state 0
	$accept: .parseroot $end 

	NUMBER  shift 3
	STRING  shift 4
	TRUE  shift 5
	FALSE  shift 6
	'{'  shift 7
	'['  shift 8
	.  error

	parseroot  goto 1
	value  goto 2

state 1
	$accept:  parseroot.$end 

	$end  accept
	.  error


state 2
	parseroot:  value.    (1)

	.  reduce 1 (src line 29)


state 3
	value:  NUMBER.    (2)

	.  reduce 2 (src line 37)


state 4
	value:  STRING.    (3)

	.  reduce 3 (src line 42)


state 5
	value:  TRUE.    (4)

	.  reduce 4 (src line 46)


state 6
	value:  FALSE.    (5)

	.  reduce 5 (src line 50)


state 7
	value:  '{'.mapvals '}' 
	value:  '{'.'}' 

	IDENT  shift 11
	'}'  shift 10
	.  error

	mapvals  goto 9

state 8
	value:  '['.listvals ']' 
	value:  '['.']' 

	NUMBER  shift 3
	STRING  shift 4
	TRUE  shift 5
	FALSE  shift 6
	'{'  shift 7
	'['  shift 8
	']'  shift 13
	.  error

	value  goto 14
	listvals  goto 12

state 9
	value:  '{' mapvals.'}' 

	'}'  shift 15
	.  error


state 10
	value:  '{' '}'.    (7)

	.  reduce 7 (src line 58)


state 11
	mapvals:  IDENT.':' value 
	mapvals:  IDENT.':' value ',' mapvals 

	':'  shift 16
	.  error


state 12
	value:  '[' listvals.']' 

	']'  shift 17
	.  error


state 13
	value:  '[' ']'.    (9)

	.  reduce 9 (src line 68)


state 14
	listvals:  value.    (12)
	listvals:  value.',' listvals 

	','  shift 18
	.  reduce 12 (src line 90)


state 15
	value:  '{' mapvals '}'.    (6)

	.  reduce 6 (src line 54)


state 16
	mapvals:  IDENT ':'.value 
	mapvals:  IDENT ':'.value ',' mapvals 

	NUMBER  shift 3
	STRING  shift 4
	TRUE  shift 5
	FALSE  shift 6
	'{'  shift 7
	'['  shift 8
	.  error

	value  goto 19

state 17
	value:  '[' listvals ']'.    (8)

	.  reduce 8 (src line 64)


state 18
	listvals:  value ','.listvals 

	NUMBER  shift 3
	STRING  shift 4
	TRUE  shift 5
	FALSE  shift 6
	'{'  shift 7
	'['  shift 8
	.  error

	value  goto 14
	listvals  goto 20

state 19
	mapvals:  IDENT ':' value.    (10)
	mapvals:  IDENT ':' value.',' mapvals 

	','  shift 21
	.  reduce 10 (src line 75)


state 20
	listvals:  value ',' listvals.    (13)

	.  reduce 13 (src line 96)


state 21
	mapvals:  IDENT ':' value ','.mapvals 

	IDENT  shift 11
	.  error

	mapvals  goto 22

state 22
	mapvals:  IDENT ':' value ',' mapvals.    (11)

	.  reduce 11 (src line 81)


16 terminals, 5 nonterminals
14 grammar rules, 23/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 8/120000
12 extra closures
33 shift entries, 1 exceptions
8 goto entries
1 entries saved by goto default
Optimizer space used: output 29/120000
29 table entries, 0 zero
maximum spread: 16, maximum offset: 21
